# NumericTCORE

./: .gitignore  README.md  compiled_dom.pddl  compiled_prob.pddl  setup.cfg  setup.py
benchmark/Depots-Numeric/: domain.pddl  pfile1.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile2.pddl  pfile20.pddl  pfile21.pddl  pfile22.pddl  pfile3.pddl  pfile4.pddl  pfile5.pddl  pfile6.pddl  pfile7.pddl  pfile8.pddl  pfile9.pddl
benchmark/OPTIC/: README.md
benchmark/Rover-Numeric/: domain.pddl  pfile1.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile2.pddl  pfile20.pddl  pfile3.pddl  pfile4.pddl  pfile5.pddl  pfile6.pddl  pfile7.pddl  pfile8.pddl  pfile9.pddl
benchmark/ZenoTravel/: pfile1.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile2.pddl  pfile20.pddl  pfile21.pddl  pfile22.pddl  pfile23.pddl  pfile3.pddl  (+6 more)
benchmark/ZenoTravel-always-within/: domain.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile20.pddl  pfile21.pddl  pfile22.pddl  pfile23.pddl  pfile3.pddl  pfile5.pddl  pfile6.pddl  pfile7.pddl  pfile8.pddl  pfile9.pddl
numeric_tcore/: achievers_helper.py  compilation.py  compilation_helper.py  constraints.py  lifted_compilation.py  numeric_regression.py  parsing_extensions.py
(+591 files in other folders)
