[metadata]
name=numeric_tcore
author=Anonymous
version = attr: numeric_tcore.__version__
description = TCORE, but with numbers
long_description = file: README.md, LICENSE
long_description_content_type = "text/markdown"
keywords = planning trajectory-constraints PDDL3 numeric-planning
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Environment :: Console
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Communications
    Topic :: Internet
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: System

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires = 

python_requires= >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    numeric_tcore*
exclude =

[bdist_wheel]
universal = 1
